[package]
name = "organic_cpu_profile"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OrganicCpuProfile traits, lifeforce envelopes, and QuantumRecedingEnvelope safety model with multi-channel device discovery for Cyberswarm and qpudatashards."
repository = "https://github.com/Doctor0Evil/Cybercore-Brain"
keywords = ["neurotech", "lifeforce", "TinyML", "IoT", "ssi"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = ["telemetry", "discovery"]
telemetry = []
discovery = []
