[package]
name = "aug-citizen-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# External SSI/VC stacks can be plugged here (e.g., identity_iota, sd-jwt),
# but we keep this crate independent and trait-based.
