[package]
name = "cyber_retrieval_cookbook_academic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cybernetic Cookbook academic retrieval lane: typed PromptEnvelope intents, NeuralRope logging, K/S/R scoring, and quiz_math hooks for safe cybernetics research."
repository = "https://github.com/Doctor0Evil/Cyber-Retrieval"
keywords = ["cybernetics", "neurorights", "retrieval", "rust", "cookbook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["quiz_math"]
quiz_math = []
