[package]
name = "cybocrypto-game-session"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cybocrypto-aln-core = { path = "../cybocrypto-aln-core" }
cybocrypto-neuro-identity = { path = "../cybocrypto-neuro-identity" }
