[package]
name = "cybocrypto-xr-dreamscape"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cybocrypto-aln-core = { path = "../cybocrypto-aln-core" }
cybocrypto-neuro-identity = { path = "../cybocrypto-neuro-identity" }
cybocrypto-game-session = { path = "../cybocrypto-game-session" }
cybocrypto-aln-partition-derive = { path = "../cybocrypto-aln-partition-derive" }
